.k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8-mcp
  labels:
    istio-injection: enabled
